--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.username=root
-spring.datasource.password=1tsMy$ql
+spring.datasource.url=<<db-url>>
+spring.datasource.username=<<db-username>>
+spring.datasource.password=<<db-password>>
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+server.servlet.context-path=/location-api
