Added support to send e-mail while the location is deleted

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.datasource.url=<<db-url>>
-spring.datasource.username=<<db-username>>
-spring.datasource.password=<<db-password>>
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 server.servlet.context-path=/location-api
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.profiles.active=secrets
+
+# Create a file called application-secrets.properties with the below properties under src/main/resource
+#spring.datasource.url=<< db url >>
+#spring.datasource.username=<< db username >>
+#spring.datasource.password=<< db password >>
+#spring.mail.username=<< e-mail username >>
+#spring.mail.password=<< e-mail password >>
+#location-api.receiver.emailid=<< receiver email id >>
